--- a/FirstSpeechTry.csproj
+++ b/FirstSpeechTry.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="OpenAI" Version="1.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MotorControl\" />
+  </ItemGroup>
+
 </Project>
