--- a/FirstSpeechTry.csproj
+++ b/FirstSpeechTry.csproj
@@ -8,12 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MotorControl\**" />
+    <Compile Remove="PuppetCore\**" />
+    <EmbeddedResource Remove="MotorControl\**" />
+    <EmbeddedResource Remove="PuppetCore\**" />
+    <None Remove="MotorControl\**" />
+    <None Remove="PuppetCore\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.33.0" />
     <PackageReference Include="OpenAI" Version="1.7.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="MotorControl\" />
+    <ProjectReference Include="PuppetCore\PuppetCore.csproj" />
   </ItemGroup>
 
 </Project>
