--- a/PuppetCore/PuppetCore.csproj
+++ b/PuppetCore/PuppetCore.csproj
@@ -1,7 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+  </PropertyGroup>
+  
+  <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -9,6 +12,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.33.0" />
     <PackageReference Include="OpenAI" Version="1.7.2" />
+    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="UsbLibrary">
+      <HintPath>..\16ChannelServoMotorControllerSampleCode\c#\WindowsFormsApplication1\bin\Release\UsbLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
