--- a/PuppetCore/PuppetCore.csproj
+++ b/PuppetCore/PuppetCore.csproj
@@ -17,7 +17,8 @@
 
   <ItemGroup>
     <Reference Include="UsbLibrary">
-      <HintPath>..\16ChannelServoMotorControllerSampleCode\c#\WindowsFormsApplication1\bin\Release\UsbLibrary.dll</HintPath>
+      <HintPath>Lib\UsbLibrary.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
 
